--- a/src/MapSearch/MapSearch.css
+++ b/src/MapSearch/MapSearch.css
@@ -1,3 +1,5 @@
+@import "https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css";
+@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 
 body,
 html {
