--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("../src/cab1.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
